README for challenge WIP

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
 
     <section class="content">
 
-      <h1>Hello, World!</h1>
+      <!--
+      ///////////////////////////////////////////
+      // Please place your implementation here //
+      ///////////////////////////////////////////
+      -->
 
     </section>
 
